fixes for my taste
- comment color is brighter
- darker default text
- error highlight is more readable
- statusline is less colorful
- pmenu is grey
- search highlight is not underlined, but bgcolor is yellow

--- a/estilo/syntax/base.yml
+++ b/estilo/syntax/base.yml
@@ -15,19 +15,19 @@ VertSplit: 'bg bg'
 Folded: 'grey2 dark'
 FoldColumn: 'grey2 dark'
 SignColumn: 'grey1 bg'
-IncSearch: 'highlighted darkest br'
-LineNr: 'grey3 -'
+IncSearch: 'highlighted yellow1'
+LineNr: 'grey2 -'
 MatchParen: 'red1 - b'
 ModeMsg: ''
 MoreMsg: ''
 NonText: 'grey3 -'
 Normal: 'text bg'
-PMenu: 'pearl blue4'
-PMenuSel: 'blue4 green1'
-PmenuSbar: 'blue4 blue4'
+PMenu: 'pearl grey3'
+PMenuSel: 'grey2 green1'
+PmenuSbar: 'grey2 grey2'
 PmenuThumb: 'green1 green1'
 Question: 'green1 -'
-Search: 'highlighted - ub'
+Search: 'highlighted yellow3'
 SpecialKey: 'grey3 -'
 SpellBad: 'red1'
 SpellLocal: 'yellow1'
@@ -43,7 +43,7 @@ Visual: '- blue5 b'
 VisualNOS: '- blue5 b'
 WarningMsg: 'red1 -'
 WildMenu: 'bg green1 b'
-Comment: 'grey2'
+Comment: 'grey1'
 Constant: 'yellow2 -'
 String: 'yellow1 -' # Constant
 Character: 'yellow2 -' # Constant
@@ -76,7 +76,7 @@ SpecialComment: '' # Special
 Debug: '' # Special
 Underlined: '- - u'
 Ignore: ''
-Error: 'text red1'
+Error: 'text red2'
 Todo: 'red1 - b'
 
 
